fix: safari on iPhone is a pain in the neck, but inifite scroll more or less works

--- a/public/global.css
+++ b/public/global.css
@@ -107,42 +107,24 @@ button:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.lds-ripple {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
   opacity: 0;
-  animation: delay-opacity 1s 0.1s forwards;
+  animation: delay-opacity 1s 0.2s forwards;
+  margin: 1em;
 }
 
-.lds-ripple div {
-  position: absolute;
-  border: 4px solid #0074d9;
-  opacity: 1;
+.loadingspinner {
+  pointer-events: none;
+  width: 2.5em;
+  height: 2.5em;
+  border: 0.4em solid transparent;
+  border-color: #eee;
+  border-top-color: #0074d9;
   border-radius: 50%;
-  animation: lds-ripple 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  animation: loadingspin 1s linear infinite;
 }
 
-.lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
-}
-
-@keyframes lds-ripple {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
-  }
+@keyframes loadingspin {
   100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
+    transform: rotate(360deg);
   }
 }
